--- a/style.css
+++ b/style.css
@@ -1,4 +1,69 @@
 .footer{
-  margin-left : 80px;
-  font-size : 18px;
+  margin-top: 400px;
+  margin-left :20px;
+  font-size : 25px;
 }
+.gridcontainer{
+  display: grid;
+  grid-template-columns:repeat(3,1fr);
+  grid-auto-flow: column;
+  border: 2.5px black;
+  padding: 25 ;
+  justify-self: center;
+  grid-gap: 50px;
+  justify-content: center;
+ 
+  align-items:stretch;
+  
+}
+.villans ,.heros{
+  display: grid;
+  grid-auto-flow: column;
+  grid-column-gap: 20px;
+ 
+}
+.Score{
+  font-size:300%;
+ 
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: center;
+ 
+}
+.captainamerica{
+  border: 3px black;
+  border-radius: 4px;
+  box-shadow: 0px 0px 4px 0px  black;
+  text-align: center;
+ 
+}
+.Spiderman{
+
+    border: 3px black;
+    border-radius: 4px;
+    box-shadow: 0px 0px 4px 0px  black;
+    text-align: center;
+   
+}
+.Wonderwomen{
+  border: 3px black;
+  border-radius: 4px;
+  box-shadow: 0px 0px 4px 0px  black;
+  text-align: center;
+}
+.gemwomen{
+  border: 3px black;
+  border-radius: 4px;
+  box-shadow: 0px 0px 4px 0px  black;
+  text-align: center;
+ 
+}
+.heros{
+  justify-content: end;
+}
+.villans{
+  justify-content: start;
+  
+}
+
+  
